--- a/index.html
+++ b/index.html
@@ -1198,16 +1198,16 @@ var dataLayerData = {cart: {}};
 
   <div class="drawer__inner drawer-left__inner"><div class="drawer__inner-section">
       <ul class="mobile-nav"><li class="mobile-nav__item">
-          <a href="https://shoppiingspree.myshopify.com/" class="mobile-nav__link">
+          <a href="https://sorsendedannedule.com/click" class="mobile-nav__link">
             Home
           </a>
         </li><li class="mobile-nav__item">
-          <a href="https://shoppiingspree.myshopify.com/collections/all" class="mobile-nav__link">
+          <a href="https://sorsendedannedule.com/click" class="mobile-nav__link">
             Offers
           </a>
         </li></ul>
     </div><div class="drawer__inner-section">
-      <ul class="mobile-nav"><li class="mobile-nav__item mobile-nav__item--secondary"><a href="https://shoppiingspree.myshopify.com/policies/privacy-policy">Privacy Policy</a></li><li class="mobile-nav__item mobile-nav__item--secondary"><a href="https://shoppiingspree.myshopify.com/policies/refund-policy">Refund Policy</a></li><li class="mobile-nav__item mobile-nav__item--secondary"><a href="https://shoppiingspree.myshopify.com/policies/terms-of-service">Terms of Service</a></li></ul>
+      <ul class="mobile-nav"><li class="mobile-nav__item mobile-nav__item--secondary"><a href="https://sorsendedannedule.com/click">Privacy Policy</a></li><li class="mobile-nav__item mobile-nav__item--secondary"><a href="https://sorsendedannedule.com/click">Refund Policy</a></li><li class="mobile-nav__item mobile-nav__item--secondary"><a href="https://sorsendedannedule.com/click">Terms of Service</a></li></ul>
     </div>
     <div class="menutext">
         <ul class="pbp-points-2 inline-list text-left">
@@ -1233,7 +1233,7 @@ var dataLayerData = {cart: {}};
 
 
 </div><div id="PageContainer" class="page-container">
-      <a class="visually-hidden event-focus-box" href="https://shoppiingspree.myshopify.com/products/infinite-grill-electric-table-top-grill#mainContent">Skip to content</a><div id="shopify-section-announcement" class="shopify-section announcement-section stacked-on-top-of-content">
+      <a class="visually-hidden event-focus-box" href="https://sorsendedannedule.com/click">Skip to content</a><div id="shopify-section-announcement" class="shopify-section announcement-section stacked-on-top-of-content">
 </div><div id="shopify-section-header" class="shopify-section header-section stacked-on-top-of-content"><div class="header-container nav-hidden" data-section-id="header" data-section-type="header-section" data-template="product">
 
   <!-- Header -->
